# bitsquatting

./: .dockerignore  .editorconfig  Cargo.toml  Dockerfile  README.md  fly.toml
public/: main.css  recursive_font.css
src/: api.rs  dns.rs  main.rs
templates/: domain_table.html.hbs  index.html.hbs
