# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "bitsquatting"
version = "0.1.0"
authors = ["Matthew Mahnke"]
license = "Unlicense OR WTFPL"
edition = "2018"
publish = false

[dependencies]
# actix-files = "0.6.0-beta"
actix-web = "4.0.0-beta"
opentelemetry = { version = "0.13", features = ["rt-tokio-current-thread"] }
opentelemetry-jaeger = { version = "0.12", features = ["tokio"] }
serde = "*"
tracing = "0.1"
tracing-actix-web = "0.4.0-beta"
tracing-bunyan-formatter = "0.1"
tracing-opentelemetry = "0.12"
tracing-subscriber = { version = "0.2", features = ["env-filter", "registry"] }
trust-dns-resolver = "0.20"
